--- a/store/blocks/footer/menu.jsonc
+++ b/store/blocks/footer/menu.jsonc
@@ -172,8 +172,8 @@
         "type": "internal",
         "href": "/",
         "noFollow": true,
-        "tagTitle": "Productos Destacados",
-        "text": "Productos Destacados"
+        "tagTitle": "Rutinas Destacados",
+        "text": "Rutinas Destacados"
       }
     }
   },
