--- a/manifest.json
+++ b/manifest.json
@@ -71,7 +71,8 @@
     "vtex.wish-list": "1.x",
     "vtex.location-availability": "0.x",
     "vtex.shopper-location": "1.x",
-    "vtex.store-locator": "0.x"
+    "vtex.store-locator": "0.x",
+    "vtexeurope.minicart-freeshipping-bar": "1.x"
   },
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
