--- a/store/blocks/header/carrito.jsonc
+++ b/store/blocks/header/carrito.jsonc
@@ -10,7 +10,7 @@
     },
     "minicart-base-content": {
       "blocks": ["minicart-empty-state"],
-      "children": ["minicart-product-list", "flex-layout.row#minicart-footer","flex-layout.col#vitrineBlockMinicart"]
+      "children": ["minicart-bar","minicart-product-list", "flex-layout.row#minicart-footer","flex-layout.col#vitrineBlockMinicart"]
     },
     "flex-layout.col#vitrineBlockMinicart": {
       "children": [
@@ -87,7 +87,7 @@
       "props": {
         "blockClass":"verCarrito",
         "label":"Finalizar pedido",
-        "finishShoppingButtonLink": "/checkout/#/profile"
+        "finishShoppingButtonLink": "/checkout/"
       }
     },
 
