--- a/store/blocks/search/search.jsonc
+++ b/store/blocks/search/search.jsonc
@@ -166,12 +166,12 @@
     "children": [
       "slider-layout#categorysSearch",
       "flex-layout.row#vitrinaDestacadaSearch",
+      "flex-layout.row#vitrineCategory",
       "flex-layout.row#searchbread",
       "flex-layout.row#searchtitle",
       "flex-layout.row#searchinfomobile",
       "flex-layout.row#productCountMobile",
-      // "flex-layout.row#fetchprevious",
-      "flex-layout.row#vitrineCategory",
+      // "flex-layout.row#fetchprevious",,
       "flex-layout.row#contentmobile",
       "flex-layout.row#fetchmore"
     ],
